# mtp-gateway

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  cliff.toml  pyproject.toml
.github/workflows/: ci.yaml  ci.yml  release.yml
docker/: Dockerfile  docker-compose.yaml
docker/timescaledb/: init.sql
examples/: reactor-pea.yaml
scripts/: generate-sbom.sh  mock_webui_server.py
scripts/ci/: check_mtp_validator.sh
src/mtp_gateway/: __init__.py  _version.py  main.py
src/mtp_gateway/adapters/northbound/: node_ids.py
src/mtp_gateway/adapters/northbound/manifest/: generator.py  parser.py
src/mtp_gateway/adapters/northbound/nodeset/: __init__.py  generator.py
src/mtp_gateway/adapters/northbound/opcua/: nodes.py  server.py
src/mtp_gateway/adapters/northbound/webui/: __init__.py  dependencies.py  server.py
src/mtp_gateway/adapters/northbound/webui/database/: __init__.py  connection.py  repository.py
src/mtp_gateway/adapters/northbound/webui/routers/: __init__.py  alarms.py  auth.py  health.py  history.py  services.py  tags.py  ws.py
src/mtp_gateway/adapters/northbound/webui/schemas/: __init__.py  alarms.py  auth.py  common.py  history.py  services.py  tags.py
src/mtp_gateway/adapters/northbound/webui/security/: __init__.py  jwt.py  password.py  rbac.py
src/mtp_gateway/adapters/northbound/webui/services/: __init__.py  alarm_detector.py  history_recorder.py
src/mtp_gateway/adapters/northbound/webui/websocket/: __init__.py  broadcaster.py  manager.py
src/mtp_gateway/adapters/persistence/: __init__.py  models.py  repository.py
src/mtp_gateway/adapters/southbound/: base.py
src/mtp_gateway/adapters/southbound/eip/: __init__.py  driver.py
src/mtp_gateway/adapters/southbound/modbus/: driver.py
src/mtp_gateway/adapters/southbound/opcua_client/: __init__.py  driver.py
src/mtp_gateway/adapters/southbound/s7/: __init__.py  driver.py
src/mtp_gateway/application/: audit.py  service_manager.py  tag_manager.py
src/mtp_gateway/application/proxies/: __init__.py  base.py  hybrid.py  thick.py  thin.py
src/mtp_gateway/cli/: app.py
src/mtp_gateway/config/: loader.py  schema.py  schema_export.py  validators.py
src/mtp_gateway/domain/model/: data_assemblies.py  services.py  tags.py
src/mtp_gateway/domain/rules/: __init__.py  interlocks.py  safety.py
src/mtp_gateway/domain/state_machine/: packml.py
src/mtp_gateway/observability/: logging.py
src/mtp_gateway/security/: __init__.py  certificates.py  secrets.py
tests/contract/: conftest.py  helpers.py  test_live_server_contract.py  test_manifest_determinism.py  test_manifest_server_consistency.py  test_nodeset_generator.py
tests/integration/: conftest.py  test_modbus_connection.py
tests/unit/: conftest.py  test_audit.py  test_config_schema.py  test_config_validators.py  test_data_assemblies.py  test_eip_driver.py  test_interlock_enforcement.py  test_interlocks.py  test_manifest_generator.py  test_manifest_parser.py  test_modbus_driver.py  test_nodeset_generator.py  test_opcua_client_driver.py  test_opcua_service_integration.py  test_packml.py  test_persistence.py  test_proxies.py  test_runtime_comm_loss.py  test_s7_driver.py  test_safety.py  test_schema_export.py  test_security.py  test_service_manager.py  test_services.py  test_tags.py  test_webui_alarm_detector.py  test_webui_history.py  test_webui_jwt.py  test_webui_password.py  test_webui_rbac.py  test_webui_routers.py
webui/: package-lock.json  package.json  vite.config.ts
webui/src/: App.tsx  index.css
webui/src/api/: alarms.ts  auth.ts  client.ts  health.ts  history.ts  index.ts  services.ts  tags.ts
webui/src/components/alarms/: AlarmBanner.tsx
webui/src/components/layout/: MainLayout.tsx  ProtectedRoute.tsx  index.ts
webui/src/components/services/: ServiceCommandPanel.tsx  ServiceStatusCard.tsx
webui/src/components/tags/: TagValueDisplay.tsx
webui/src/components/trends/: TrendChart.tsx
webui/src/hooks/: useWebSocket.ts
webui/src/pages/: Alarms.tsx  Dashboard.tsx  Login.tsx  Services.tsx  Trends.tsx
webui/src/store/: alarmsStore.ts  authStore.ts  index.ts  servicesStore.ts  tagsStore.ts
webui/src/types/: index.ts
